--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "1.15.1",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.7",
@@ -8,6 +9,7 @@
     "com.unity.multiplayer.tools": "1.0.0-pre.2",
     "com.unity.netcode.adapter.utp": "1.0.0-pre.3",
     "com.unity.netcode.gameobjects": "1.0.0-pre.3",
+    "com.unity.probuilder": "5.0.3",
     "com.unity.services.lobby": "1.0.0-pre.6",
     "com.unity.services.relay": "1.0.1-pre.3",
     "com.unity.test-framework": "1.1.29",
